--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "React-Porfolio",
-  "homepage": " https://hassanmahdi58.github.io/React-Portfolio/",
+  "homepage": "https://hassanmahdi58.github.io/React-Porfolio/",
   "version": "0.1.0",
   "repository": {
     "type": "git",
